third and hopefully final commit

--- a/senatorial.html
+++ b/senatorial.html
@@ -22,7 +22,7 @@
 
     <div class="content">
         <div class="banner">
-            <img src="assets/banner.png">
+            <img src="assets/banner.jpg">
         </div>
 
         <div id="titlensocials">
@@ -48,7 +48,7 @@
             <img src="assets/xmark-solid.svg" />
         </div>
 
-        <nav>
+        <nav id="navbar">
             <div class="navbar">
                <a href="index.html"><button>presidential candidates</button></a>
                 <a href="senatorial.html"><button class="active">senatorial candidates</button></a>
