--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div class="content">
         <div class="banner">
-            <img src="assets/banner.png">
+            <img src="assets/banner.jpg">
         </div>
 
         <div id="titlensocials">
@@ -46,7 +46,7 @@
             <img src="assets/xmark-solid.svg" />
         </div>
 
-        <nav>
+        <nav id="navbar">
             <div class="navbar">
                <a href="index.html"><button class="active">presidential candidates</button></a>
                 <a href="senatorial.html"><button>senatorial candidates</button></a>
