--- a/senatorial.html
+++ b/senatorial.html
@@ -350,10 +350,10 @@
                 AMANDA CHOU & SIMON PARK, Photo Editors<br>
                 LAUREN SCHATZMAN, Art Director<br>
                 ALYSSA SHAO, Design Director<br>
-                MYRIAM ALCALA, ANA MATA & KACIE YAMAMOTO Associate Managing Editors<br>
+                MYRIAM ALCALA, ANA MATA & KACIE YAMAMOTO, Associate Managing Editors<br>
                 EMANUEL RODRIGUEZ, Digital Managing Editor<br>
                 LOIS ANGELO, Managing Editor<br>
-                SHAYLEE NAVARRO Editor-in-Chief</p>
+                SHAYLEE NAVARRO, Editor-in-Chief</p>
             <p id="dt-disclaimer">© UNIVERSITY OF SOUTHERN CALIFORNIA | Daily Trojan 2022. All rights reserved.</p>            
     </div>
 </footer>
