updated text blurbs

--- a/index.html
+++ b/index.html
@@ -102,20 +102,18 @@
                 </h1>
             </div>
             <div class="textbox">
-                <p>For Hannah Woodworth and Nivea Krishnan, prioritizing student equality and perspectives is the driving force behind their platform, “YourSC.” Their mission focuses on accountability, advocacy and accessibility but, more generally, they look to create a more open and accessible approach to leadership.
+                <p>For Hannah Woodworth and Nivea Krishnan, prioritizing student equity and perspectives is the driving force behind their platform, “YourSC.” Their mission focuses on accountability, advocacy and accessibility but, more generally, they look to create a more open approach to leadership.
                 </p>
                 <p>“That’s the whole point of our campaign,” said Woodworth, a junior majoring in journalism. “We want to be as inclusive of the entire University as possible.”
                 </p>
-                <p>“Woodworth, who serves as Undergraduate Student Government executive aid for president Alexis Areias, said she feels attuned to the position’s demands, while Krishnan, a senator serving on various committees, said she feels prepared for the vice president role. 
-                </p>
-                <p>“I’m not really getting into something that I don’t know what it is,” Woodworth said. “I fully understand the position and I feel like I’m ready to take it on.” 
-                </p>
-                <p>“This semester, I’ve learned a lot about what a viable strategy for advocacy is and it's a lot about reaching out to student organizations that are already doing the work and trying to connect with them and support their efforts,” said Krishnan, a sophomore majoring in public policy and economics.
+                <p>Woodworth, who serves as Undergraduate Student Government executive aid for president Alexis Areias, said she feels attuned to the position’s demands, while Krishnan, a senator serving on various committees, said she feels prepared for the vice president role.</p>
+                <p>“I’ve learned a lot about what a viable strategy for advocacy is and it’s a lot about reaching out to student organizations that are already doing the work and trying to connect with them and support their efforts,” said Krishnan, a sophomore majoring in public policy and economics.</p>
+                <p>The candidate duo wish to also maintain a strong relationship with the Office of Student Accessibility Services, and listen to various organizations perspectives.
                 </p>
                 <p>The candidate duo wish to also maintain a strong relationship with the Office of Student Accessibility Services, and carry out a means to listen to various organizations perspectives and input.
                 </p>
-                <p>“[USG is] meant to be the intermediary between the students and the administration to bring the demands of students up to our University leaders,” Woodworth said. “We are both very involved in USG now in different capacities. That does not mean that we don’t see the flaws within the system. We are very aware of ways that USG needs to improve, especially with regards to transparency.”
-                </p>
+                <p>“We are both very involved in USG now ... That does not mean that we don’t see the flaws within the system. We are very aware of ways that USG needs to improve, especially with regards to transparency.”</p>
+                <p>Correction: A previous version of this article misstated Hannah Woodworth and Nivea Krishnan's platform to prioritize "student equality" instead of "student equity." The <em>Daily Trojan</em> regrets this error. </p>
             </div>
         </div>
 
@@ -128,14 +126,15 @@
             <div class="textbox">
                 <p>President and vice president ticket Rachel Lee and Collin Colson are combining satire and sincerity for their platform based on abolishing Greek life and defunding the Department of Public Safety.
                 </p>
-                <p>“We are simultaneously actually challenging [the Undergraduate Student Government] to be better,” said Lee, a junior majoring in philosophy, politics and law. Both candidates were motivated by what they saw as an ineffectual student government. Lee and Colson, the latter a sophomore majoring in philosophy, politics and law, said they believe their outsider stance of no prior experience in student government gives them an objective view of USG.
+                <p>“We are simultaneously actually challenging [the Undergraduate Student Government] to be better,” said Lee, a junior majoring in philosophy, politics and law.</p>
+                <p>Both candidates were motivated by what they saw as an ineffectual student government. Lee and Colson, the latter a sophomore majoring in writing for screen and television, said they believe their lack of experience in student government gives them an objective view of USG.
                 </p>
                 <p>Regarding their plans for abolishing Greek life, Lee said they would take the same actions the University took to suspend Sigma Nu last semester and suspend all fraternities and sororities permanently.
                 </p>
                 <p>The ticket’s other campaign promise includes allocating DPS’s $50 million annual budget towards unhoused individuals that live near USC’s campus.
                 </p>
-                <p>“DPS is mostly a symbolic human barrier between the students of USC and the inhabitants of South Central,” Lee said. “I think that we can allocate millions of dollars to homeless shelters around the area and think about hiring social workers instead to respond to calls of distress rather than having a police affiliated organization to ‘enforce justice.’”
-                </p>
+                <p>“DPS is mostly a symbolic human barrier between the students of USC and the inhabitants of South Central,” Lee said. “I think that we can allocate millions of dollars to homeless shelters around the area and think about hiring social workers instead to respond to calls of distress rather than having a police affiliated organization to ‘enforce justice.’”</p>
+                <p>Correction: A previous version of this article misstated Collin Colson's major as "philosophy, politics and law" instead of "writing for screen and television." The <em>Daily Trojan</em> regrets this error.</p>
             </div>
         </div>
 
