--- a/senatorial.html
+++ b/senatorial.html
@@ -66,7 +66,7 @@
 
         <div class="intro">
             <h1 class="title">MEET THE SENATORIAL TICKETS</h1>
-            <p class="text">From Wednesday, Feb. 23 to Friday, Feb. 25, USC undergraduates will cast their vote for the 12 open senate seats for the 2022-21 academic year. The Daily Trojan interviewed the 21 senatorial tickets — nine candidate pairs and three running individually — about their campaign platforms, ranging from increasing accessibility, addressing mental health concerns and amplifying student perspectives. Read more about each candidates’ senatorial plans in this special election guide.</p>
+            <p class="text">From Wednesday, Feb. 23 to Friday, Feb. 25, USC undergraduates will cast their vote for the 12 open senate seats for the 2022-23 academic year. The <em>Daily Trojan</em> interviewed the 21 senatorial tickets — nine candidate pairs and three running individually — about their campaign platforms, ranging from increasing accessibility, addressing mental health concerns and amplifying student perspectives. Read more about each candidates’ senatorial plans in this special election guide.</p>
         </div>
         
         <div id="hovergrid">
